--- a/main.yml
+++ b/main.yml
@@ -7,14 +7,96 @@
 
   vars_files:
     - config.yml
+    - config-secrets.yml
 
   roles:
     - geerlingguy.security
 
-  tasks:
-    - meta: noop
+  handlers:
+    - name: restart nut-server
+      service:
+        name: nut-server
+        state: restarted
+      when: not ansible_check_mode
 
-- name: Set up NUT Client on servers.
+    - name: restart nut-monitor
+      service:
+        name: nut-monitor
+        state: restarted
+      when: not ansible_check_mode
+
+  tasks:
+    - name: Ensure NUT is installed.
+      package:
+        name: nut
+        state: present
+
+    - name: Change NUT UPS configuration.
+      blockinfile:
+        path: /etc/nut/ups.conf
+        marker: "# {mark} ANSIBLE MANAGED BLOCK"
+        block: |
+          [{{ nut_ups_name }}]
+              driver = {{ nut_ups_driver }}
+              product = UPS
+              desc = "{{ nut_ups_description }}"
+              port = {{ nut_ups_port }}
+              vendorid = {{ nut_ups_vendorid }}
+              productid = {{ nut_ups_productid }}
+              bus = {{ nut_ups_bus }}
+        state: present
+        mode: 0640
+      notify: restart nut-server
+
+    - name: Change UPSD configuration.
+      lineinfile:
+        path: /etc/nut/upsd.conf
+        regexp: '^LISTEN.+'
+        line: "LISTEN 0.0.0.0 3493"
+        insertafter: EOF
+        state: present
+        mode: 0640
+      notify: restart nut-server
+
+    - name: Configure UPSD users.
+      blockinfile:
+        path: /etc/nut/upsd.users
+        marker: "# {mark} ANSIBLE MANAGED BLOCK"
+        block: "{{ nut_upsd_users }}"
+        state: present
+        mode: 0640
+      notify: restart nut-server
+
+    - name: Configure UPS Monitor.
+      lineinfile:
+        path: /etc/nut/upsmon.conf
+        regexp: '^MONITOR.+'
+        line: "MONITOR {{ nut_ups_name }}@localhost 1 {{ nut_ups_admin_user }} {{ nut_ups_admin_password }} primary"
+        insertafter: EOF
+        state: present
+        mode: 0640
+      notify: restart nut-monitor
+
+    - name: Configure NUT mode.
+      lineinfile:
+        path: /etc/nut/nut.conf
+        regexp: '^MODE.+'
+        line: "MODE=netserver"
+        state: present
+        mode: 0640
+      notify: restart nut-server
+
+    - name: Ensure NUT is running (if configured).
+      service:
+        name: "{{ item }}"
+        state: "{{ nut_state }}"
+        enabled: "{{ nut_enabled }}"
+      with_items:
+        - nut-server
+        - nut-monitor
+      when: not ansible_check_mode
+
+- name: Set up NUT Client on other servers.
   hosts: clients
   become: true
   gather_facts: true
