Fixing all the bugs. Power's about to go out...

--- a/config.yml
+++ b/config.yml
@@ -22,13 +22,14 @@ nut_ups_admin_user: admin
 #       actions = set
 #       actions = fsd
 #       instcmds = all
+#       upsmon primary
 
 #   [observer]
 #       password = OBSERVER_PASSWORD_HERE
 #       upsmon secondary
 
 nut_client_ups: server-room-rack
-nut_client_server: 10.0.1.10
+nut_client_server: 10.0.2.10
 nut_client_username: observer
 
 # See config-secrets.yml
