--- a/main.yml
+++ b/main.yml
@@ -51,17 +51,12 @@
     - name: Change UPSD configuration.
       lineinfile:
         path: /etc/nut/upsd.conf
-        regexp: "{{ item.regexp }}"
-        line: "{{ item.line }}"
+        regexp: '^LISTEN 0.+'
+        line: "LISTEN 0.0.0.0 3493"
         insertafter: EOF
         state: present
         mode: 0640
       notify: restart nut-server
-      with_items:
-        - regexp: '^LISTEN 127.+'
-          line: "LISTEN 127.0.0.1 3493"
-        - regexp: '^LISTEN 0.+'
-          line: "LISTEN 0.0.0.0 3493"
 
     - name: Configure UPSD users.
       blockinfile:
