Updated for local environment.

--- a/hosts.yml
+++ b/hosts.yml
@@ -1,23 +1,20 @@
 ---
 all:
   hosts:
+    pve01.sysnet.co.il:
+    pve02.sysnet.co.il:
+    pve03.sysnet.co.il:
+
     # Pi NUT - primary
-    pi-nut.mmoffice.net:
-      ansible_user: pi
-
-    # NAS01
-    nas01.mmoffice.net:
-      ansible_user: jgeerling
-
-    # Pi NVR
-    pi-nvr.mmoffice.net:
+    nut.sysnet.co.il:
       ansible_user: pi
 
   children:
     primary:
       hosts:
-        pi-nut.mmoffice.net:
+        nut.sysnet.co.il:
     clients:
       hosts:
-        nas01.mmoffice.net:
-        pi-nvr.mmoffice.net:
+        pve01.sysnet.co.il:
+        pve02.sysnet.co.il:
+        pve03.sysnet.co.il:
