--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,4 +1,4 @@
 [defaults]
 inventory=hosts.yml
-vault_password_file=~/.ansible/mm-vault-password.txt
+# vault_password_file=~/.ansible/mm-vault-password.txt
 interpreter_python=auto_silent
