updated for synology as master

--- a/hosts.yml
+++ b/hosts.yml
@@ -2,16 +2,16 @@
 all:
   hosts:
     # Pi NUT - primary
-    nut.sysnet.co.il:
-      ansible_user: pi
+#    nut.sysnet.co.il:
+#      ansible_user: pi
     pve01.sysnet.co.il:
     pve02.sysnet.co.il:
     pve03.sysnet.co.il:
 
   children:
-    primary:
-      hosts:
-        nut.sysnet.co.il:
+#    primary:
+#      hosts:
+#        nut.sysnet.co.il:
     clients:
       hosts:
         pve01.sysnet.co.il:
