--- a/config-secrets.yml
+++ b/config-secrets.yml
@@ -1,3 +1,3 @@
-nut_client_password: OBSERVER_PASSWORD_HERE
+nut_client_password: secret
 nut_ups_admin_password: ADMIN_PASSWORD_HERE
 synology_password: secret
