--- a/config.yml
+++ b/config.yml
@@ -33,8 +33,8 @@ nut_upsd_users: |
       upsmon secondary
 
 nut_client_ups: ups
-nut_client_server: 172.16.10.127
-nut_client_username: observer
+nut_client_server: 172.16.10.3
+nut_client_username: monuser
 
 # See config-secrets.yml
 # nut_client_password: OBSERVER_PASSWORD_HERE
